--- a/updater/build.gradle
+++ b/updater/build.gradle
@@ -12,12 +12,19 @@ targetCompatibility = JavaVersion.VERSION_14
 
 version "${version}"
 
-jar {
+jar.enabled = false
+jar.dependsOn shadowJar
+
+shadowJar {
   doFirst {
     manifest {
-      attributes "Main-Class": "com.faforever.client.updater.Updater"
+      attributes "Main-Class": "com.faforever.client.updater.UpdateFinalizer"
     }
   }
+}
+
+shadowJar {
+  archiveClassifier = ''
 }
 
 dependencies {
