--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
 before_install:
   - export JDK="openjdk14"
   #Installs the normal openjdk as this is not supported by travis itself
-  - chmod +x ./ci/installjdk.sh && sudo ./ci/installjdk.sh
+  - chmod +x ./ci/installjdk.sh && ./ci/installjdk.sh
   - export JAVA_HOME="~/$JDK"
-  - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw -Djava.library.path=$HOME/openjfx/javafx-sdk-14/lib"
+  - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw"
   - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw"
   - export APP_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG#*v}" || echo "${TRAVIS_BRANCH##*/}")
   - export GITHUB_RELEASE_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG}" || echo "${TRAVIS_BRANCH##*/}")
@@ -44,6 +44,7 @@ deploy:
   file_glob: true
   file:
   - build/install4j/*.exe
+  - build/install4j/*.msi
   - build/install4j/*.zip
   - build/install4j/*.gz
   - build/install4j/*.deb
