Add correct icons to coop tab

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ javafxVersion=11.0.2
 coverallsGradlePluginVersion=2.10.1
 jnaVersion=5.0.0
 discordRpcVersion=1.6.2-jna
+install4jHomeDir=C:\\Program Files\\install4j8
