--- a/build.gradle
+++ b/build.gradle
@@ -283,7 +283,7 @@ dependencies {
   compile("javax.annotation:javax.annotation-api:1.3.1")
   compile("com.github.ben-manes.caffeine:caffeine")
   compile("org.apache.httpcomponents:httpclient")
-  compile("ch.micheljung.fxstage:fxstage:0.7.2")
+  compile("ch.micheljung.fxstage:fxstage:0.7.3")
   compile("ch.micheljung.waitomo:jfx-waitomo-theme:0.2.0")
 
   compile("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
@@ -311,4 +311,8 @@ dependencies {
   optional("org.springframework.boot:spring-boot-configuration-processor")
 
   codacy("com.github.codacy:codacy-coverage-reporter:-SNAPSHOT")
+}
+
+task downloadWebViewPatch{
+
 }
