--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,8 @@ faf-client:
     rules_url: https://forums.faforever.com/viewtopic.php?f=2&t=17873
     map_validation_url: ${faf-client.api.base-url}/maps/validate
     mapDownloadUrlFormat: ${faf-client.vault.base-url}/maps/%s.zip
-    mapPreviewUrlFormat: ${faf-client.vault.base-url}/faf/vault/map_previews/%s/%s.png
-    modDownloadUrlFormat: ${faf-client.vault.base-url}/faf/vault/maps/%s.zip
+    mapPreviewUrlFormat: ${faf-client.vault.base-url}/map_previews/%s/%s.png
+    modDownloadUrlFormat: ${faf-client.vault.base-url}/maps/%s.zip
 
   website:
       forgot-password-url: ${faf-client.website.base-url}/account/password/reset
