Move to constant in Website

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ faf-client:
   website:
       forgot-password-url: ${faf-client.website.base-url}/account/password/reset
       create-account-url: ${faf-client.website.base-url}/account/register
+      report-url: ${faf-client.website.base-url}/account/report
       news-hub-url: ${faf-client.website.base-url}/newshub
 
   imgur:
