Use logging.file.name instead of deprecated property

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -104,3 +104,4 @@ logging:
     com.faforever.client.os: info
     com.faforever.client.fa.relay.ice: info
     com.faforever.client.fx: info
+  config: classpath:logback-spring.xml
