Simplify header menus with submenus

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,13 @@ faf-client:
     dynamic-factor: 10
     draw-probability: 0.1
 
-  links:
+  help-links:
+    linksRules: ${faf-client.website.base-url}/rules
     linksTecHelpDiscord: https://discord.gg/BMDMUKS
     linksTecHelpForum: https://forum.faforever.com/category/4/i-need-help
-    linksRules: ${faf-client.website.base-url}/rules
     linksModerationReport: ${faf-client.website.base-url}/account/report
+
+  social-links:
     linksFacebook: https://www.facebook.com/ForgedAllianceForever/
     linksDevNews: https://faforeverdevblog.tumblr.com
     linksYoutube: https://www.youtube.com/channel/UCkAWiUu4QE172kv-ZuyR42w
