--- a/build.gradle
+++ b/build.gradle
@@ -253,13 +253,12 @@ dependencies {
   compile("com.github.micheljung:pircbotx:18481dcbfd") {
     exclude module: 'guava'
   }
-  compile("com.google.guava:guava:28.0-jre")
-  compile("org.apache.commons:commons-compress:1.18")
+  compile("com.google.guava:guava:30.0-jre")
+  compile("org.apache.commons:commons-compress:1.20")
   compile("net.java.dev.jna:jna:${jnaVersion}")
   compile("net.java.dev.jna:jna-platform:${jnaVersion}")
-  compile("org.eclipse.jgit:org.eclipse.jgit:5.1.3.201810200350-r")
-  compile("org.jetbrains:annotations:16.0.3")
-  compile("net.sf.jtidy:jtidy:r938")
+  compile("org.eclipse.jgit:org.eclipse.jgit:5.9.0.202009080501-r")
+  compile("org.jetbrains:annotations:20.1.0")
   compile("com.neovisionaries:nv-i18n:1.23")
   compile("com.rometools:rome:1.11.1")
   compile("org.jsoup:jsoup:1.11.3")
@@ -269,7 +268,7 @@ dependencies {
   compile("commons-validator:commons-validator:1.6")
   compile("com.github.micheljung:JJsonRpc:01a7fba5f4")
   compile("javax.inject:javax.inject:1")
-  compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonDatatypeJsr310Version}")
+  compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
   compile("com.github.rutledgepaulv:q-builders:${qBuildersVersion}")
   compile("com.github.nsp:JSkills:${jSkillsVersion}")
   compile("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
