--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,14 @@ script:
   - java -version
   - chmod +x ./ci/build.sh && ./ci/build.sh
   - chmod +x ./ci/test.sh && ./ci/test.sh
+#  Jacoco does not currently support javafx
+#  - chmod +x ./ci/test-report.sh && ./ci/test-report.sh
 
 after_success:
   - if [ -n "${TRAVIS_TAG}" ]; then chmod +x ./ci/github-release.sh && ./ci/github-release.sh; fi
 
 after_failure:
-- cat /home/travis/build/FAForever/downlords-faf-client/hs_err_pid*.log
+  - cat /home/travis/build/FAForever/downlords-faf-client/hs_err_pid*.log
 
 deploy:
   provider: releases
