--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,13 @@ buildscript {
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
   }
 }
-
+// jacoco does not currently support java15
 plugins {
   id "com.install4j.gradle" version "7.0.7"
   id "co.riiid.gradle" version "0.4.2"
   id "de.undercouch.download" version "3.4.3"
   id 'net.ltgt.apt' version '0.19'
+  // id 'jacoco'
   id 'com.github.kt3k.coveralls' version "${coverallsGradlePluginVersion}"
 }
 
@@ -107,6 +108,12 @@ def httpRequest(Method method, String url, onSuccess) {
     }
   }
 }
+
+//jacocoTestReport {
+//  reports {
+//    xml.enabled = true
+//  }
+//}
 
 test {
   testLogging {
@@ -216,6 +223,12 @@ task downloadNativeDependencies(dependsOn: [downloadUnixUid, downloadWindowsUid,
 
 compileJava.dependsOn 'downloadNativeDependencies'
 compileJava.dependsOn ':webview-patch:build'
+
+//task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+//  main = "com.codacy.CodacyCoverageReporter"
+//  classpath = configurations.codacy
+//  args = ["-l", "Java", "-r", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"]
+//}
 
 repositories {
   jcenter()
