--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ javafxPlatform=unspecified
 faf_ice_adapter_version=3.0.0
 faf_uid_version=4.0.4
 propdepsVersion=0.0.7
-springBootVersion=2.3.6.RELEASE
+springBootVersion=2.4.0
 springSecurityOauth2AutoconfigureVersion=2.3.4.RELEASE
 fafCommonsVersion=c1db35776a062a4f345cd6e17366dddd8b09492f
 qBuildersVersion=1.6
