--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 15.0.1
+        java-package: jdk+fx
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
