Remove standard streams

--- a/build.gradle
+++ b/build.gradle
@@ -120,11 +120,13 @@ jacocoTestReport {
   }
 }
 
-test {
-  testLogging {
-    showStandardStreams = true
-  }
-}
+// hangs github actions
+
+//test {
+//  testLogging {
+//    showStandardStreams = true
+//  }
+//}
 
 configurations {
   codacy
