Revert "Add github actions checks"

--- a/build.gradle
+++ b/build.gradle
@@ -120,13 +120,11 @@ jacocoTestReport {
   }
 }
 
-// hangs github actions
-
-//test {
-//  testLogging {
-//    showStandardStreams = true
-//  }
-//}
+test {
+  testLogging {
+    showStandardStreams = true
+  }
+}
 
 configurations {
   codacy
