--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,4 @@
 import com.install4j.gradle.Install4jTask
-import de.undercouch.gradle.tasks.download.Download
-import groovy.json.JsonSlurper
-import groovyx.net.http.ContentType
-import groovyx.net.http.HTTPBuilder
-import groovyx.net.http.Method
-import groovyx.net.http.ParserRegistry
 import org.gradle.internal.os.OperatingSystem
 
 buildscript {
@@ -80,40 +74,6 @@ configurations {
   compile.exclude module: "assertj-core"
 }
 
-class HttpBuilder extends HTTPBuilder {
-
-  HttpBuilder(String url) {
-    super(url)
-    this.parser.'text/json' = { resp ->
-      def bufferedText = resp.entity.content.getText(ParserRegistry.getCharset(resp)).trim()
-      return new JsonSlurper().parseText(bufferedText)
-    }
-    this.parser.'application/json' = this.parser.'text/json'
-  }
-}
-
-def httpRequest(Method method, String url, onSuccess) {
-  def http = new HttpBuilder(url)
-
-  http.request(method) {
-    requestContentType = ContentType.JSON
-
-    headers.'User-Agent' = 'downlords-faf-client-gradle'
-    headers.'Authorization' = "token ${project.github.token}"
-    headers.'Accept' = 'application/vnd.github.v3+json'
-
-    response.success = onSuccess
-
-    response.failure = { resp, json ->
-      logger.debug 'Response headers: \n' + resp.headers.collect { "< $it" }.join('\n')
-      def errorMessage = json ? json.message : resp.statusLine
-      def ref = json ? "See $json.documentation_url" : ''
-      def errorDetails = json && json.errors ? "Details: " + json.errors.collect { it }.join('\n') : ''
-      throw new GradleScriptException("$errorMessage. $ref. $errorDetails", null)
-    }
-  }
-}
-
 jacocoTestReport {
   reports {
     xml.enabled = true
@@ -122,7 +82,7 @@ jacocoTestReport {
 
 test {
   testLogging {
-    showStandardStreams = true
+    events("failed")
   }
 }
 
