--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Cache Install4j
-        id: cache-install4j
-        uses: actions/cache@v2
-        with:
-          path: |
-            $HOME/install4j/
-            ~/.install4j8
-          key: ${{ runner.os }}-install4j
-
       - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
@@ -45,20 +36,17 @@ jobs:
 
       - name: Download Install4j
         run: |
-          if [ ! -d "$INSTALL4J_DIR" ] || [ ! -d "$HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz" ]; then
-            rm -rf "$HOME/install4j"
             mkdir -p "$HOME/install4j"
             curl https://download-gcdn.ej-technologies.com/install4j/install4j_unix_8_0_8.tar.gz -o "$HOME/install4j/install4j8.tar.gz"
             mkdir -p "$HOME/.install4j8/jres/"
             curl https://content.faforever.com/jre/windows-amd64-15.0.1.tar.gz -o "$HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz"
             tar xzf "$HOME/install4j/install4j8.tar.gz" -C "$HOME/install4j"
-          fi
 
       - name: Build Windows Files
         run: |
           ./gradlew -Pversion=${{ github.event.inputs.version }} \
           -PjavafxPlatform=win \
-          -Pinstall4jHomeDir="$INSTALL4J_DIR" \
+          -Pinstall4jHomeDir=$INSTALL4J_DIR \
           -Pinstall4jLicense=${{ secrets.INSTALL4J_LICENSE }} \
           --info \
           --stacktrace \
@@ -68,7 +56,7 @@ jobs:
         run: |
           ./gradlew -Pversion=${{ github.event.inputs.version }} \
           -PjavafxPlatform=linux \
-          -Pinstall4jHomeDir="$INSTALL4J_DIR" \
+          -Pinstall4jHomeDir=$INSTALL4J_DIR \
           -Pinstall4jLicense=${{ secrets.INSTALL4J_LICENSE }} \
           --stacktrace \
           buildInstall4jMediaFiles
