--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      INSTALL4J_DIR: "$HOME/install4j/install4j8.0.8"
+      INSTALL4J_DIR: "install4j/install4j8.0.8"
 
     steps:
       - uses: actions/checkout@v2
@@ -39,11 +39,11 @@ jobs:
 
       - name: Download Install4j
         run: |
-            mkdir -p "$HOME/install4j"
+            mkdir -p "install4j"
             curl https://download-gcdn.ej-technologies.com/install4j/install4j_unix_8_0_8.tar.gz -o "$HOME/install4j/install4j8.tar.gz"
-            mkdir -p "$HOME/.install4j8/jres/"
-            curl https://content.faforever.com/jre/windows-amd64-15.0.1.tar.gz -o "$HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz"
-            tar xzf "$HOME/install4j/install4j8.tar.gz" -C "$HOME/install4j"
+            mkdir -p ".install4j8/jres/"
+            curl https://content.faforever.com/jre/windows-amd64-15.0.1.tar.gz -o ".install4j8/jres/windows-amd64-15.0.1.tar.gz"
+            tar xzf "$HOME/install4j/install4j8.tar.gz" -C "install4j"
 
       - name: Build Windows Files
         run: |
