--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,20 +19,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Cache Install4j
-        id: cache-install4j
-        uses: actions/cache@v2.1.3
-        with:
-          path: $HOME/$INSTALL4J_DIR
-          key: $INSTALL4J_DIR
-          
-      - name: Cache Bundled JRE
-        id: cache-jre
-        uses: actions/cache@v2.1.3
-        with:
-          path: $HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz
-          key: 15.0.1
+
+          #      - name: Cache Install4j
+          #        id: cache-install4j
+          #        uses: actions/cache@v2.1.3
+          #        with:
+          #          path: $HOME/$INSTALL4J_DIR
+          #          key: $INSTALL4J_DIR
+
+      #      - name: Cache Bundled JRE
+      #        id: cache-jre
+      #        uses: actions/cache@v2.1.3
+      #        with:
+      #          path: $HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz
+      #          key: 15.0.1
 
       - name: Set up JDK 15
         uses: actions/setup-java@v1
@@ -49,14 +49,14 @@ jobs:
           JAVA_TOOL_OPTIONS: "-Dprism.verbose=true -Dprism.order=sw"
 
       - name: Download Install4j
-        if: steps.cache-install4j.outputs.cache-hit != 'true'
+        #        if: steps.cache-install4j.outputs.cache-hit != 'true'
         run: |
             mkdir -p "$HOME/install4j"
             curl https://download-gcdn.ej-technologies.com/install4j/install4j_unix_8_0_8.tar.gz -o "$HOME/install4j/install4j8.tar.gz"
             tar xzf "$HOME/install4j/install4j8.tar.gz" -C "$HOME/install4j"
             
       - name: Download Bundled JRE
-        if: steps.cache-jre.outputs.cache-hit != 'true'
+        #        if: steps.cache-jre.outputs.cache-hit != 'true'
         run: |
             mkdir -p "$HOME/.install4j8/jres/"
             curl https://content.faforever.com/jre/windows-amd64-15.0.1.tar.gz -o "$HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz"
