--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,7 +90,22 @@ jobs:
           release_name: v${{ github.event.inputs.version }}
           draft: true
           prerelease: true
-
+          
+      - name: Get Artifact Paths
+        run: |
+          LINUX_TAR=$(ls build/install4j/dfc_unix_*.tar.gz | head -n 1)
+          LINUX_TAR_NAME=$(basename $LINUX_TAR)
+          WINDOWS_EXE=$(ls build/install4j/dfc_windows-x64_*.exe | head -n 1)
+          WINDOWS_EXE_NAME=$(basename $WINDOWS_EXE)
+          WINDOWS_ZIP=$(ls build/install4j/dfc_windows-x64_*.zip | head -n 1)
+          WINDOWS_ZIP_NAME=$(basename $WINDOWS_ZIP)
+          echo ::set-env name=LINUX_TAR::${LINUX_TAR}
+          echo ::set-env name=LINUX_TAR_NAME::${LINUX_TAR_NAME}
+          echo ::set-env name=WINDOWS_EXE::${WINDOWS_EXE}
+          echo ::set-env name=WINDOWS_EXE_NAME::${WINDOWS_EXE_NAME}
+          echo ::set-env name=WINDOWS_ZIP::${WINDOWS_ZIP}
+          echo ::set-env name=WINDOWS_ZIP_NAME::${WINDOWS_ZIP_NAME}
+          
       - name: Upload Linux Files
         id: upload-linux
         uses: actions/upload-release-asset@v1
@@ -98,8 +113,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $HOME/build/install4j/dfc_unix_${{ github.event.inputs.version }}.tar.gz
-          asset_name: dfc_unix_${{ github.event.inputs.version }}.tar.gz
+          asset_path: ${{ env.LINUX_TAR }}
+          asset_name: ${{ env.LINUX_TAR_NAME }}
           asset_content_type: application/gzip
 
       - name: Upload Windows exe
@@ -109,8 +124,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $HOME/build/install4j/dfc_windows-x64_${{ github.event.inputs.version }}.exe
-          asset_name: dfc_windows-x64_${{ github.event.inputs.version }}.exe
+          asset_path: ${{ env.WINDOWS_EXE }}
+          asset_name: ${{ env.WINDOWS_EXE_NAME }}
           asset_content_type: application/vnd.microsoft.portable-executable
 
       - name: Upload Windows zip
@@ -120,6 +135,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/install4j/dfc_windows-x64_${{ github.event.inputs.version }}.zip
-          asset_name: dfc_windows-x64_${{ github.event.inputs.version }}.zip
+          asset_path: ${{ env.WINDOWS_ZIP }}
+          asset_name: ${{ env.WINDOWS_ZIP_NAME }}
           asset_content_type: application/zip
