Use Flowless over listview for chat user list

--- a/build.gradle
+++ b/build.gradle
@@ -253,6 +253,7 @@ dependencies {
   compile("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
   compile ("com.github.axel1200:discord-rpc:${discordRpcVersion}")
   compile("org.controlsfx:controlsfx:${controlsfxVersion}")
+  compile("org.fxmisc.flowless:flowless:${flowlessVersion}")
 
   compile project(":webview-patch")
   compile("org.javassist:javassist:${project.ext['javassist.version']}")
