--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ coverallsGradlePluginVersion=2.10.1
 jnaVersion=5.6.0
 discordRpcVersion=1.6.2-jna
 controlsfxVersion=11.0.3
+flowlessVersion=0.6.2
