--- a/build.gradle
+++ b/build.gradle
@@ -249,7 +249,7 @@ dependencies {
   compile("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
-  compile ("com.github.axel1200:discord-rpc:${discordRpcVersion}")
+  compile("com.github.1-alex98:discord-rpc:${discordRpcVersion}")
   compile("org.controlsfx:controlsfx:${controlsfxVersion}")
   compile("org.fxmisc.flowless:flowless:${flowlessVersion}")
 
