Use rpc server to tell discord to join a server
Fixes #2154

--- a/build.gradle
+++ b/build.gradle
@@ -208,8 +208,10 @@ dependencies {
   compile("org.springframework.boot:spring-boot-starter")
   compile("org.springframework.boot:spring-boot-starter-cache")
   compile("org.springframework.boot:spring-boot-starter-logging")
+  compile("org.springframework.boot:spring-boot-starter-websocket")
   compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
   compile("org.springframework:spring-web")
+  compile("org.springframework:spring-websocket")
 
   compile("com.github.FAForever:faf-java-commons:${fafCommonsVersion}") {
     exclude module: 'guava'
