--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,13 @@ jobs:
       #        with:
       #          path: $HOME/.install4j8/jres/windows-amd64-15.0.1.tar.gz
       #          key: 15.0.1
+      
+      - name: Check Version Tag
+        id: tag_check
+        run: |
+          if [[ ${{ github.event.inputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo ::set-output name=major_release::true
+          fi
 
       - name: Set up JDK 15
         uses: actions/setup-java@v1
@@ -100,6 +107,8 @@ jobs:
           WINDOWS_EXE_NAME=$(basename $WINDOWS_EXE)
           WINDOWS_ZIP=$(ls build/install4j/dfc_windows-x64_*.zip | head -n 1)
           WINDOWS_ZIP_NAME=$(basename $WINDOWS_ZIP)
+          EXE_PATH=$(dirname $WINDOWS_EXE)/
+          echo ::set-output name=EXE_PATH::${EXE_PATH}
           echo ::set-output name=LINUX_TAR::${LINUX_TAR}
           echo ::set-output name=LINUX_TAR_NAME::${LINUX_TAR_NAME}
           echo ::set-output name=WINDOWS_EXE::${WINDOWS_EXE}
@@ -139,3 +148,16 @@ jobs:
           asset_path: ${{ steps.artifact_paths.outputs.WINDOWS_ZIP }}
           asset_name: ${{ steps.artifact_paths.outputs.WINDOWS_ZIP_NAME }}
           asset_content_type: application/zip
+          
+      - name: Upload to Mirror
+        if: steps.tag_check.outputs.major_release == 'true'
+        uses: bayssmekanique/action-simple-file-upload@v1
+        with:
+          user: ${{ secrets.FTP_MIRROR_USERNAME }}
+          password: ${{ secrets.FTP_MIRROR_PASSWORD }}
+          host: ${{ secrets.FTP_MIRROR_HOST }}
+          src: ${{ steps.artifact_paths.outputs.WINDOWS_EXE }}
+          dest: ${{ steps.artifact_paths.outputs.WINDOWS_EXE_NAME }}
+
+    
+      
