Use updated web-application-type

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,10 +62,10 @@ faf-client:
 spring:
   profiles:
     active: ${CLIENT_PROFILE:prod}
-  main:
-    web-environment: false
   application:
     name: Downlord's FAF Client
+  main:
+    web-application-type: none
 
 security:
   oauth2:
