--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,16 +13,10 @@ jobs:
   checks:
 
     runs-on: ubuntu-latest
+    
+    container: adoptopenjdk:15-jdk-hotspot-bionic
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 15.0.1
-        uses: actions/setup-java@v1
-        with:
-          java-version: 15.0.1
-          java-package: jdk+fx
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
