Move remote config setup to login function rather than button press

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -28,6 +28,5 @@ faf-client:
 
 logging:
   level:
-    org.pircbotx.PircBotX: off
-    com.faforever.client.chat.PircBotXChatService: off
+    com.faforever.client.chat.KittehChatService: off
     com.faforever.client.fa.relay.ice: debug
