--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Checks
-        run: xvfb-run --auto-servernum ./gradlew --stacktrace -PjavafxPlatform=linux check
+        run: xvfb-run --auto-servernum ./gradlew -PjavafxPlatform=linux check
         env:
           JAVA_TOOL_OPTIONS: "-Dprism.verbose=true -Dprism.order=sw"
 
