--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,9 +1,11 @@
 faf-client:
   server:
     host: localhost
+    port: 8001
 
   irc:
     host: localhost
+    port: 6697
 
   vault:
     base-url: https://content.faforever.com
@@ -14,6 +16,7 @@ faf-client:
 
   replay:
     remote-host: localhost
+    remote-port: 15000
 
   website:
     base-url: http://localhost:8020
@@ -28,6 +31,5 @@ faf-client:
 
 logging:
   level:
-    org.pircbotx.PircBotX: off
-    com.faforever.client.chat.PircBotXChatService: off
+    com.faforever.client.chat.KittehChatService: off
     com.faforever.client.fa.relay.ice: debug
